Revision history for Hailo

{{$NEXT}}

0.45 2010-05-27 19:56:31

    - The regular expression introduced in 0.44 to check if a word was
      of MiXeD CaSe was pathological. Changed it to a simpler one that
      works better.

    - The --no-progress option to hailo to suppress the progress bar
      now works again. It had been broken since 0.26 at least.

0.44 2010-05-27 15:55:30

    - Removed the backwards-compatible "Pg" and "mysql" aliases for
      the storage backends and the "DBD::" prefix. This use has been
      deprecated since 0.31. Simply use "PostgreSQL", "MySQL" or
      "SQLite" instead.

    - This release contains improvements for the default Words
      tokenizer. It's recommended that users rebuild their Hailo
      brains when upgrading. See UPGRADING in the Hailo manual.
  
      - Add URI support to the Words tokenizer. It will now use
        Regexp::Common's URI regex to tokenize URIs as-is.
  
        This improves performance a lot on input that contains URIs,
        previously Hailo would split them up nonsensically, which
        would inflate the token table a lot with little gain.
  
      - Preserve the capitalization of words that change case in the
        middle of the word. Examples include GumbyBRAIN, WoW, HoRRiBlE
        etc. Previously these and others that weren't 100% upper-case
        would all be lower cased.
  
      - Preserve the capitalization of words that are all upper-case
        followed by a non-word character followed by lower-case. This
        preserves words like KIA'd, FYIQ'ed and other things that are
        likely to be partial acronyms.
  
      - Twitter names. I.e. tokens matching @[A-Za-z0-9_]+ will be
        tokenized as-is. This ensures that Hailo users like
        Bot::Twatterhose don't corrupt their Twitter names.
  
      - Eliminate some redundant use of the regex engine in the Words
        tokenizer.

    - Include --help in bin/hailo's POD. It's now easier to read it