@@ -2,6 +2,14 @@ Revision history for Hailo
 
 {{$NEXT}}
 
+    - The Regexp::Common pattern added in 0.44 slowed down Hailo by up
+      to 45% in pathological cases (tests doing lots of
+      tokenization), overall test suite slowdown was closer to 10%.
+
+      Now the pattern is only compiled once for the lifetime of the
+      process with /o. This trick has also been applied to a few other
+      patterns.
+
 0.45 2010-05-27 19:56:31
 
     - The regular expression introduced in 0.44 to check if a word was
